@@ -63,127 +63,182 @@ $GLOBALS['xoopsTpl']->assign('params', $params);
 
 $cookieStyle   = $GLOBALS['xoopsConfig']['usercookie'] . '_wgf_indexstyle';
 $cookiePreview = $GLOBALS['xoopsConfig']['usercookie'] . '_wgf_indexpreview';
+$cookieSorting = $GLOBALS['xoopsConfig']['usercookie'] . '_wgf_indexsort';
 
 switch ($op) {
     case 'list':
     default:
-    // handle cookies
-    $cookieIndexstyle = Request::getString($cookieStyle, 'none', 'COOKIE');
-    if ('none' === $cookieIndexstyle) {
-        $cookieIndexstyle = Constants::COOKIE_STYLE_DEFAULT;
-        xoops_setcookie($cookieStyle, $cookieIndexstyle, time() + 60 * 60 * 24 * 30);
-    } else {
-        $cookieIndexstyle = $_COOKIE[$cookieStyle];
-    }
-    $GLOBALS['xoopsTpl']->assign('wgfindexstyle', $cookieIndexstyle);
-    $GLOBALS['xoopsTpl']->assign('styledefault', Constants::COOKIE_STYLE_DEFAULT);
-    $GLOBALS['xoopsTpl']->assign('stylegrouped', Constants::COOKIE_STYLE_GROUPED);
-    $GLOBALS['xoopsTpl']->assign('stylecard', Constants::COOKIE_STYLE_CARD);
-    $GLOBALS['xoopsTpl']->assign('stylecardbig', Constants::COOKIE_STYLE_CARDBIG);
+        $GLOBALS['xoTheme']->addScript('browse.php?Frameworks/jquery/jquery.js');
+        // handle cookies
+        // cookie style
+        $cookieIndexstyle = Request::getString($cookieStyle, 'none', 'COOKIE');
+        if ('none' === $cookieIndexstyle) {
+            $cookieIndexstyle = Constants::COOKIE_STYLE_DEFAULT;
+            xoops_setcookie($cookieStyle, $cookieIndexstyle, time() + 60 * 60 * 24 * 30);
+        } else {
+            $cookieIndexstyle = $_COOKIE[$cookieStyle];
+        }
+        $GLOBALS['xoopsTpl']->assign('wgfindexstyle', $cookieIndexstyle);
+        $GLOBALS['xoopsTpl']->assign('styledefault', Constants::COOKIE_STYLE_DEFAULT);
+        $GLOBALS['xoopsTpl']->assign('stylegrouped', Constants::COOKIE_STYLE_GROUPED);
+        $GLOBALS['xoopsTpl']->assign('stylecard', Constants::COOKIE_STYLE_CARD);
+        $GLOBALS['xoopsTpl']->assign('stylecardbig', Constants::COOKIE_STYLE_CARDBIG);
 
-    $cookieIndexPreview = Request::getString($cookiePreview, 'none', 'COOKIE');
-    if ('none' === $cookieIndexPreview) {
-        $cookieIndexPreview = Constants::COOKIE_NOPREVIEW;
-        xoops_setcookie($cookiePreview, $cookieIndexPreview, time() + 60 * 60 * 24 * 30);
-    } else {
-        $cookieIndexPreview = $_COOKIE[$cookiePreview];
-    }
-    $GLOBALS['xoopsTpl']->assign('wgfindexpreview', (int)$cookieIndexPreview);
+        // cookie preview
+        $cookieIndexPreview = Request::getString($cookiePreview, 'none', 'COOKIE');
+        if ('none' === $cookieIndexPreview) {
+            $cookieIndexPreview = Constants::COOKIE_NOPREVIEW;
+            xoops_setcookie($cookiePreview, $cookieIndexPreview, time() + 60 * 60 * 24 * 30);
+        } else {
+            $cookieIndexPreview = $_COOKIE[$cookiePreview];
+        }
+        $GLOBALS['xoopsTpl']->assign('wgfindexpreview', (int)$cookieIndexPreview);
+        $GLOBALS['xoopsTpl']->assign('previewshow', Constants::COOKIE_PREVIEW);
+        $GLOBALS['xoopsTpl']->assign('previewhide', Constants::COOKIE_NOPREVIEW);
 
-    // Breadcrumbs
-    if ($dirId > 1) {
-        $xoBreadcrumbs[] = ['title' => \_MA_WGFILEMANAGER_INDEX, 'link' => 'index.php'];
-        $dirArray = $directoryHandler->getDirListBreadcrumb($dirId);
-        $dirListBreadcrumb = array_reverse($dirArray, true);
-        foreach ($dirListBreadcrumb as $key => $value) {
-            if ($key == array_key_last($dirListBreadcrumb)) {
-                $xoBreadcrumbs[] = ['title' => $value];
-            } else {
-                $xoBreadcrumbs[] = ['title' => $value, 'link' => 'index.php?dir_id=' . $key];
+        // cookie sorting
+        $cookieIndexSort = Request::getString($cookieSorting, 'none', 'COOKIE');
+        if ('none' === $cookieIndexSort) {
+            $cookieIndexSort = Constants::COOKIE_SORT_NAME_ASC;
+            xoops_setcookie($cookieSorting, $cookieIndexSort, time() + 60 * 60 * 24 * 30);
+        } else {
+            $cookieIndexSort = $_COOKIE[$cookieSorting];
+        }
+        $GLOBALS['xoopsTpl']->assign('wgfindexsort', $cookieIndexSort);
+        $GLOBALS['xoopsTpl']->assign('sortnameasc', Constants::COOKIE_SORT_NAME_ASC);
+        $GLOBALS['xoopsTpl']->assign('sortnamedesc', Constants::COOKIE_SORT_NAME_DESC);
+        $GLOBALS['xoopsTpl']->assign('sortctimeasc', Constants::COOKIE_SORT_CTIME_ASC);
+        $GLOBALS['xoopsTpl']->assign('sortctimedesc', Constants::COOKIE_SORT_CTIME_DESC);
+        $GLOBALS['xoopsTpl']->assign('sortdatecreateasc', Constants::COOKIE_SORT_DATE_CREATE_ASC);
+        $GLOBALS['xoopsTpl']->assign('sortdatecreatedesc', Constants::COOKIE_SORT_DATE_CREATE_DESC);
+        switch ($cookieIndexSort) {
+            case Constants::COOKIE_SORT_NAME_ASC:
+            default:
+                $sortby = 'name';
+                $orderby = 'ASC';
+                break;
+            case Constants::COOKIE_SORT_NAME_DESC:
+                $sortby = 'name';
+                $orderby = 'DESC';
+                break;
+            case Constants::COOKIE_SORT_CTIME_ASC:
+                $sortby = 'ctime';
+                $orderby = 'ASC';
+                break;
+            case Constants::COOKIE_SORT_CTIME_DESC:
+                $sortby = 'ctime';
+                $orderby = 'DESC';
+                break;
+            case Constants::COOKIE_SORT_DATE_CREATE_ASC:
+                $sortby = 'date_create';
+                $orderby = 'ASC';
+                break;
+            case Constants::COOKIE_SORT_DATE_CREATE_DESC:
+                $sortby = 'date_create';
+                $orderby = 'DESC';
+                break;
+        }
+
+        // Breadcrumbs
+        if ($dirId > 1) {
+            $xoBreadcrumbs[] = ['title' => \_MA_WGFILEMANAGER_INDEX, 'link' => 'index.php'];
+            $dirArray = $directoryHandler->getDirListBreadcrumb($dirId);
+            $dirListBreadcrumb = array_reverse($dirArray, true);
+            foreach ($dirListBreadcrumb as $key => $value) {
+                if ($key == array_key_last($dirListBreadcrumb)) {
+                    $xoBreadcrumbs[] = ['title' => $value];
+                } else {
+                    $xoBreadcrumbs[] = ['title' => $value, 'link' => 'index.php?dir_id=' . $key];
+                }
+            }
+        } else {
+            $xoBreadcrumbs[] = ['title' => \_MA_WGFILEMANAGER_INDEX];
+        }
+
+        //get permissions
+        $GLOBALS['xoopsTpl']->assign('permCreateDir', $permissionsHandler->getPermSubmitDirectory($dirId));
+        $GLOBALS['xoopsTpl']->assign('permEditDir', $permissionsHandler->getPermSubmitDirectory($dirId));
+        $GLOBALS['xoopsTpl']->assign('permEditFile', $permissionsHandler->getPermSubmitDirectory($dirId));
+        $GLOBALS['xoopsTpl']->assign('permDownloadFileFromDir', $permissionsHandler->getPermDownloadFileFromDir($dirId));
+        $GLOBALS['xoopsTpl']->assign('permUploadFileToDir', $permissionsHandler->getPermUploadFileToDir($dirId));
+        $GLOBALS['xoopsTpl']->assign('permViewDirectory', $permissionsHandler->getPermViewDirectory($dirId));
+        $GLOBALS['xoopsTpl']->assign('showBtnDetails', true);
+
+        //get directory list
+        $dirList = $directoryHandler->getDirList(0, $dirId);
+        $GLOBALS['xoopsTpl']->assign('dir_list', $dirList);
+        $GLOBALS['xoopsTpl']->assign('dirId', $dirId);
+        $indexDirList = $directoryHandler->getSubDirList($dirId);
+        $GLOBALS['xoopsTpl']->assign('indexDirlist', $indexDirList);
+        $GLOBALS['xoopsTpl']->assign('indexDirlistIcon', WGFILEMANAGER_ICONS_URL . '/foldericons/folder2.png');
+
+        // get files
+        $crFile = new \CriteriaCompo();
+        $crFile->add(new \Criteria('directory_id', $dirId));
+        $fileCount = $fileHandler->getCount($crFile);
+
+        $fileList = [];
+        $crFile->setStart($start);
+        $crFile->setLimit($limit);
+        $crFile->setSort($sortby);
+        $crFile->setOrder($orderby);
+        if ($fileCount > 0) {
+            $fileIcons = [];
+            if ('none' !== $iconSet) {
+                $fileIcons = $fileHandler->getFileIconCollection($iconSet);
+            }
+            $fileAll = $fileHandler->getAll($crFile);
+            foreach (\array_keys($fileAll) as $i) {
+                $file = $fileAll[$i]->getValuesFile();
+                $ext  = substr(strrchr($file['name'], '.'), 1);
+                $fileCategory = isset($fileIcons['files'][$ext]) ? (int)$fileIcons['files'][$ext]['category'] : 0;
+                $file['category']  = $fileCategory;
+                $file['icon_url']  = isset($fileIcons['files'][$ext]) ? $fileIcons['files'][$ext]['src'] : $fileIcons['default'];
+                $file['image']     = false;
+                $file['image_url'] = '';
+                $file['pdf']       = false;
+                $file['pdf_url']   = '';
+                switch ($fileCategory) {
+                    case 0:
+                        break;
+                    case Constants::MIMETYPE_CAT_IMAGE:
+                        $file['image'] = true;
+                        $file['image_url'] = $file['real_url'];
+                        break;
+                    case Constants::MIMETYPE_CAT_PDF:
+                        $file['pdf'] = true;
+                        $file['pdf_url'] = $file['real_url'];
+                        break;
+                }
+                $fileList[$i]        = $file;
             }
         }
-    } else {
-        $xoBreadcrumbs[] = ['title' => \_MA_WGFILEMANAGER_INDEX];
-    }
-
-    //get permissions
-    $GLOBALS['xoopsTpl']->assign('permCreateDir', $permissionsHandler->getPermSubmitDirectory($dirId));
-    $GLOBALS['xoopsTpl']->assign('permEditDir', $permissionsHandler->getPermSubmitDirectory($dirId));
-    $GLOBALS['xoopsTpl']->assign('permEditFile', $permissionsHandler->getPermSubmitDirectory($dirId));
-    $GLOBALS['xoopsTpl']->assign('permDownloadFileFromDir', $permissionsHandler->getPermDownloadFileFromDir($dirId));
-    $GLOBALS['xoopsTpl']->assign('permUploadFileToDir', $permissionsHandler->getPermUploadFileToDir($dirId));
-    $GLOBALS['xoopsTpl']->assign('permViewDirectory', $permissionsHandler->getPermViewDirectory($dirId));
-    $GLOBALS['xoopsTpl']->assign('showBtnDetails', true);
-    //get directory list
-    $dirList = $directoryHandler->getDirList(0, $dirId);
-    $GLOBALS['xoopsTpl']->assign('dir_list', $dirList);
-    $GLOBALS['xoopsTpl']->assign('dirId', $dirId);
-
-    $indexDirList = $directoryHandler->getSubDirList($dirId);
-    $GLOBALS['xoopsTpl']->assign('indexDirlist', $indexDirList);
-    $GLOBALS['xoopsTpl']->assign('indexDirlistIcon', WGFILEMANAGER_ICONS_URL . '/foldericons/folder2.png');
-
-
-    $crFile = new \CriteriaCompo();
-    $crFile->add(new \Criteria('directory_id', $dirId));
-    $fileCount = $fileHandler->getCount($crFile);
-
-    $fileList = [];
-    $crFile->setStart($start);
-    $crFile->setLimit($limit);
-    $crFile->setSort('name');
-    $crFile->setOrder('ASC');
-    if ($fileCount > 0) {
-        $fileIcons = [];
-        if ('none' !== $iconSet) {
-            $fileIcons = $fileHandler->getFileIconCollection($iconSet);
+        $GLOBALS['xoopsTpl']->assign('indexFilelist', $fileList);
+        // Display Navigation
+        if ($fileCount > $limit) {
+            require_once \XOOPS_ROOT_PATH . '/class/pagenav.php';
+            $pagenav = new \XoopsPageNav($fileCount, $limit, $start, 'start', 'op=list&amp;limit=' . $limit . '&amp;dir_id=' . $dirId);
+            $GLOBALS['xoopsTpl']->assign('pagenavFile', $pagenav->renderNav());
         }
-        $fileAll = $fileHandler->getAll($crFile);
-        foreach (\array_keys($fileAll) as $i) {
-            $file = $fileAll[$i]->getValuesFile();
-            $ext  = substr(strrchr($file['name'], '.'), 1);
-            $fileCategory = isset($fileIcons['files'][$ext]) ? (int)$fileIcons['files'][$ext]['category'] : 0;
-            $file['category']  = $fileCategory;
-            $file['icon_url']  = isset($fileIcons['files'][$ext]) ? $fileIcons['files'][$ext]['src'] : $fileIcons['default'];
-            $file['image']     = false;
-            $file['image_url'] = '';
-            $file['pdf']       = false;
-            $file['pdf_url']   = '';
-            switch ($fileCategory) {
-                case 0:
-                    break;
-                case Constants::MIMETYPE_CAT_IMAGE:
-                    $file['image'] = true;
-                    $file['image_url'] = $file['real_url'];
-                    break;
-                case Constants::MIMETYPE_CAT_PDF:
-                    $file['pdf'] = true;
-                    $file['pdf_url'] = $file['real_url'];
-                    break;
-            }
-            $fileList[$i]        = $file;
-        }
-    }
-    $GLOBALS['xoopsTpl']->assign('indexFilelist', $fileList);
-    // Display Navigation
-    if ($fileCount > $limit) {
-        require_once \XOOPS_ROOT_PATH . '/class/pagenav.php';
-        $pagenav = new \XoopsPageNav($fileCount, $limit, $start, 'start', 'op=list&amp;limit=' . $limit . '&amp;dir_id=' . $dirId);
-        $GLOBALS['xoopsTpl']->assign('pagenavFile', $pagenav->renderNav());
-    }
-    break;
+        break;
 
     case 'setstyle':
         // set cookies and reload
         $styleType = Request::getString('style');
         xoops_setcookie($cookieStyle, $styleType, time() + 60 * 60 * 24 * 30);
+        \redirect_header('index.php?op=list' . $params, 0);
+        break;
+    case 'setpreview':
+        // set cookies and reload
+        $previewType = Request::getInt('preview');
+        xoops_setcookie($cookiePreview, $previewType, time() + 60 * 60 * 24 * 30);
 
         \redirect_header('index.php?op=list' . $params, 0);
         break;
-    case 'preview':
+    case 'setsort':
         // set cookies and reload
-        $styleType = Request::getInt('style');
-        xoops_setcookie($cookiePreview, $styleType, time() + 60 * 60 * 24 * 30);
+        $sortType = Request::getInt('sort');
+        xoops_setcookie($cookieSorting, $sortType, time() + 60 * 60 * 24 * 30);
 
         \redirect_header('index.php?op=list' . $params, 0);
         break;
