@@ -35,6 +35,11 @@ require_once __DIR__ . '/admin.php';
 \define('_MA_WGFILEMANAGER_INDEX_STYLECARD', 'Show in card style');
 \define('_MA_WGFILEMANAGER_INDEX_STYLECARDBIG', 'Show in big card style');
 \define('_MA_WGFILEMANAGER_INVALID_PARAMS', 'Invalid parameters');
+//sorting
+\define('_MA_WGFILEMANAGER_INDEX_SORTLIST', 'Sort List');
+\define('_MA_WGFILEMANAGER_NAME', 'by name');
+\define('_MA_WGFILEMANAGER_DATE_CREATE', 'by date submission');
+\define('_MA_WGFILEMANAGER_CTIME', 'by file creation date');
 // ---------------- Contents ----------------
 // Directory
 \define('_MA_WGFILEMANAGER_DIRECTORY', 'Directory');
