@@ -14,8 +14,25 @@
                     <a class="btn btn-sm btn-outline-primary <{if $wgfindexstyle == $stylecardbig}>disabled<{/if}>" href='index.php?op=setstyle&amp;style=<{$stylecardbig}><{$params|default:''}>' title='<{$smarty.const._MA_WGFILEMANAGER_INDEX_STYLECARDBIG}>'><img src="<{$wgfilemanager_icon_bi_url}>grid.svg" alt="<{$smarty.const._MA_WGFILEMANAGER_INDEX_STYLECARDBIG}>" ></a>
                 </div>
                 <div class="btn-group btn-group-sm text-end" role="group" aria-label="group_view">
-                    <a class="btn btn-sm btn-outline-primary <{if $wgfindexpreview|default:false == 1}>disabled<{/if}>" href='index.php?op=preview&amp;style=1<{$params|default:''}>' class="space-before <{if $wgfindexpreview|default:false}>disabled wgf-active<{/if}>" title='<{$smarty.const._MA_WGFILEMANAGER_INDEX_PREVIEW}>'><img src="<{$wgfilemanager_icon_bi_url}>eye.svg" alt="<{$smarty.const._MA_WGFILEMANAGER_INDEX_PREVIEW}>" ></a>
-                    <a class="btn btn-sm btn-outline-primary <{if $wgfindexpreview|default:false == 0}>disabled<{/if}>" href='index.php?op=preview>&amp;style=0<{$params|default:''}>' class="<{if !$wgfindexpreview|default:false}>disabled wgf-active<{/if}>" title='<{$smarty.const._MA_WGFILEMANAGER_INDEX_NOPREVIEW}>'><img src="<{$wgfilemanager_icon_bi_url}>eye-slash.svg" alt="<{$smarty.const._MA_WGFILEMANAGER_INDEX_NOPREVIEW}>" ></a>
+                    <a class="btn btn-sm btn-outline-primary <{if $wgfindexpreview|default:false == 1}>disabled<{/if}>" href='index.php?op=setpreview&amp;preview=<{$previewshow}><{$params|default:''}>' class="space-before <{if $wgfindexpreview|default:false}>disabled wgf-active<{/if}>" title='<{$smarty.const._MA_WGFILEMANAGER_INDEX_PREVIEW}>'><img src="<{$wgfilemanager_icon_bi_url}>eye.svg" alt="<{$smarty.const._MA_WGFILEMANAGER_INDEX_PREVIEW}>" ></a>
+                    <a class="btn btn-sm btn-outline-primary <{if $wgfindexpreview|default:false == 0}>disabled<{/if}>" href='index.php?op=setpreview>&amp;preview=<{$previewhide}><{$params|default:''}>' class="<{if !$wgfindexpreview|default:false}>disabled wgf-active<{/if}>" title='<{$smarty.const._MA_WGFILEMANAGER_INDEX_NOPREVIEW}>'><img src="<{$wgfilemanager_icon_bi_url}>eye-slash.svg" alt="<{$smarty.const._MA_WGFILEMANAGER_INDEX_NOPREVIEW}>" ></a>
+                </div>
+                <div class="btn-group btn-group-sm text-end" role="group" aria-label="group_sort">
+                    <div class="dropdown">
+                        <a class="btn btn-sm btn-outline-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="<{$wgfilemanager_icon_bi_url}>sort-up-alt.svg" alt="<{$smarty.const._MA_WGFILEMANAGER_INDEX_SORTLIST}>" ><img src="<{$wgfilemanager_icon_bi_url}>sort-down.svg" alt="<{$smarty.const._MA_WGFILEMANAGER_INDEX_SORTLIST}>" >
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a title="<{$smarty.const._ASCENDING}> {$smarty.const._MA_WGFILEMANAGER_NAME}>" class="dropdown-item <{if $wgfindexsort == $sortnameasc}>disabled<{/if}>" href='index.php?op=setsort&amp;sort=<{$sortnameasc}><{$params|default:''}>'><img src="<{$wgfilemanager_icon_bi_url}>sort-alpha-up.svg" alt="<{$smarty.const._ASCENDING}>" ><{$smarty.const._ASCENDING}> <{$smarty.const._MA_WGFILEMANAGER_NAME}></a></li>
+                            <li><a title="<{$smarty.const._DESCENDING}> {$smarty.const._MA_WGFILEMANAGER_NAME}>" class="dropdown-item <{if $wgfindexsort == $sortnamedesc}>disabled<{/if}>" href='index.php?op=setsort&amp;sort=<{$sortnamedesc}><{$params|default:''}>'><img src="<{$wgfilemanager_icon_bi_url}>sort-alpha-down-alt.svg" alt="<{$smarty.const._DESCENDING}>" ><{$smarty.const._DESCENDING}> <{$smarty.const._MA_WGFILEMANAGER_NAME}></a></li>
+                            <li><a title="<{$smarty.const._ASCENDING}> {$smarty.const._MA_WGFILEMANAGER_CTIME}>" class="dropdown-item <{if $wgfindexsort == $sortctimeasc}>disabled<{/if}>" href='index.php?op=setsort&amp;sort=<{$sortctimeasc}><{$params|default:''}>'><img src="<{$wgfilemanager_icon_bi_url}>sort-up-alt.svg" alt="<{$smarty.const._ASCENDING}>" ><{$smarty.const._ASCENDING}> <{$smarty.const._MA_WGFILEMANAGER_CTIME}></a></li>
+                            <li><a title="<{$smarty.const._DESCENDING}> {$smarty.const._MA_WGFILEMANAGER_CTIME}>" class="dropdown-item <{if $wgfindexsort == $sortctimedesc}>disabled<{/if}>" href='index.php?op=setsort&amp;sort=<{$sortctimedesc}><{$params|default:''}>'><img src="<{$wgfilemanager_icon_bi_url}>sort-down-alt.svg" alt="<{$smarty.const._DESCENDING}>" ><{$smarty.const._DESCENDING}> <{$smarty.const._MA_WGFILEMANAGER_CTIME}></a></li>
+                            <li><a title="<{$smarty.const._ASCENDING}> {$smarty.const._MA_WGFILEMANAGER_DATE_CREATE}>" class="dropdown-item <{if $wgfindexsort == $sortdatecreateasc}>disabled<{/if}>" href='index.php?op=setsort&amp;sort=<{$sortdatecreateasc}><{$params|default:''}>'><img src="<{$wgfilemanager_icon_bi_url}>sort-up-alt.svg" alt="<{$smarty.const._ASCENDING}>" ><{$smarty.const._ASCENDING}> <{$smarty.const._MA_WGFILEMANAGER_DATE_CREATE}></a></li>
+                            <li><a title="<{$smarty.const._DESCENDING}> {$smarty.const._MA_WGFILEMANAGER_DATE_CREATE}>" class="dropdown-item <{if $wgfindexsort == $sortdatecreatedesc}>disabled<{/if}>" href='index.php?op=setsort&amp;sort=<{$sortdatecreatedesc}><{$params|default:''}>'><img src="<{$wgfilemanager_icon_bi_url}>sort-down.svg" alt="<{$smarty.const._DESCENDING}>" ><{$smarty.const._DESCENDING}> <{$smarty.const._MA_WGFILEMANAGER_DATE_CREATE}></a></li>
+
+                        </ul>
+                    </div>
                 </div>
             </div>
+
 
